--- a/erykandroidcommon/src/main/res/values-pl/strings.xml
+++ b/erykandroidcommon/src/main/res/values-pl/strings.xml
@@ -19,33 +19,39 @@
     <!-- plurals -->
     <plurals name="seconds">
         <item quantity="one">%d Sekunda</item>
-        <item quantity="other">%d Sekund</item>
+        <item quantity="few">%d Sekund</item>
+        <item quantity="many">%d Sekund</item>
     </plurals>
     <plurals name="minutes">
         <item quantity="one">%d Minuta</item>
-        <item quantity="other">%d Minut</item>
+        <item quantity="few">%d Minut</item>
+        <item quantity="many">%d Minut</item>
     </plurals>
     <plurals name="hours">
         <item quantity="one">%d Godzina</item>
-        <item quantity="other">%d Godzin</item>
+        <item quantity="few">%d Godzin</item>
+        <item quantity="many">%d Godzin</item>
     </plurals>
     <plurals name="days">
         <item quantity="one">%d Dzień</item>
-        <item quantity="other">%d Dni</item>
+        <item quantity="few">%d Dni</item>
+        <item quantity="many">%d Dni</item>
     </plurals>
     <plurals name="weeks">
         <item quantity="one">%d Tydzień</item>
-        <item quantity="other">%d Tygodni</item>
+        <item quantity="few">%d Tygodni</item>
+        <item quantity="many">%d Tygodni</item>
     </plurals>
     <plurals name="months">
         <item quantity="one">%d Miesiąc</item>
-        <item quantity="other">%d Miesięcy</item>
+        <item quantity="few">%d Miesiąc</item>
+        <item quantity="many">%d Miesięcy</item>
     </plurals>
     <plurals name="years">
         <item quantity="one">%d Rok</item>
-        <item quantity="other">%d Lat</item>
+        <item quantity="few">%d Lat</item>
+        <item quantity="many">%d Lat</item>
     </plurals>
-
 
     <!-- grouped recycler -->
     <string name="today">Dzisiaj</string>
