--- a/erykandroidcommon/src/main/res/values-pl/strings.xml
+++ b/erykandroidcommon/src/main/res/values-pl/strings.xml
@@ -15,6 +15,7 @@
     <string name="no_data">Brak danych</string>
     <string name="comments">Komentarze</string>
     <string name="publish">Opublikuj</string>
+    <string name="initializing">Initializing...</string>
 
     <!-- plurals -->
     <plurals name="seconds">
