--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -87,4 +87,18 @@
     <string name="menu" translatable="false">Menu</string>
     <string name="unknown" translatable="false">Unknown</string>
 
+    <string name="jan">Jan</string>
+    <string name="feb">Feb</string>
+    <string name="mar">Mar</string>
+    <string name="apr">Apr</string>
+    <string name="may">May</string>
+    <string name="jun">Jun</string>
+    <string name="jul">Jul</string>
+    <string name="aug">Aug</string>
+    <string name="sep">Sep</string>
+    <string name="oct">Oct</string>
+    <string name="nov">Nov</string>
+    <string name="dec">Dec</string>
+
+
 </resources>
